Add folding